// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs should render component 1`] = `
<div
  className="mfui-breadcrumbs mfui-breadcrumbs_color_default"
>
  <div
    className="mfui-breadcrumbs__item"
    key="МегаФон"
  >
    <TextLink
      color="default"
      dataAttrs={
        Object {
          "root": undefined,
        }
      }
      href="#"
    >
      МегаФон
    </TextLink>
  </div>
  <div
    className="mfui-breadcrumbs__item"
    key="Мобильная связь"
  >
    <TextLink
      color="default"
      dataAttrs={
        Object {
          "root": undefined,
        }
      }
      href="#"
    >
      Мобильная связь
    </TextLink>
  </div>
  <div
    className="mfui-breadcrumbs__item"
    key="Тарифы"
  >
    <TextLink
      color="default"
      dataAttrs={
        Object {
          "root": undefined,
        }
      }
      href="#"
    >
      Тарифы
    </TextLink>
  </div>
</div>
`;

exports[`Breadcrumbs should render with optional props 1`] = `
<div
  className="mfui-breadcrumbs mfui-breadcrumbs_color_white custom-class-name"
  data-testid="root-test"
>
  <div
    className="mfui-breadcrumbs__item item-custom-class-name"
    key="МегаФон"
  >
    <TextLink
      color="white"
      dataAttrs={
        Object {
          "root": Object {
            "data-testid": "link-test[1]",
          },
        }
      }
      href="#"
    >
      МегаФон
    </TextLink>
  </div>
  <div
    className="mfui-breadcrumbs__item item-custom-class-name"
    key="Мобильная связь"
  >
    <TextLink
      color="white"
      dataAttrs={
        Object {
          "root": Object {
            "data-testid": "link-test[2]",
          },
        }
      }
      href="#"
    >
      Мобильная связь
    </TextLink>
  </div>
  <div
    className="mfui-breadcrumbs__item item-custom-class-name"
    key="Тарифы"
  >
    <TextLink
      color="white"
      dataAttrs={
        Object {
          "root": Object {
            "data-testid": "link-test[3]",
          },
        }
      }
      href="#"
    >
      Тарифы
    </TextLink>
  </div>
</div>
`;
